--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
         </a>
         <!-- /.user -->
       </div>
-      <!-- /.navbar-top -->
-      <nav class="nav-top">
+      <!-- /.navbar-top -->      
+    </div>
+    <!-- /.container -->
+    <nav class="navbar-bottom">
+      <div class="container">
         <ul class="navbar-menu">
           <li class="navbar-menu__item">
             <a href="#" class="navbar-menu__link">All Deals</a>
@@ -60,10 +63,10 @@
           </li>
         </ul>
         <!-- /.navbar-menu -->
-      </nav>
-      <!-- /.nav-top -->
-    </div>
-    <!-- /.container -->
+      </div>
+      <!-- /.container -->
+    </nav>
+    <!-- /.navbar-bottom -->
   </header>
   <!-- /.header -->
 
